--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "axios": "^1.0.0",
     "ws": "^8.0.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
